# octopus

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs
src/algorithm/: epsilon_greedy.rs  error.rs  mod.rs
src/algorithms/: epsilon_greedy.rs  mod.rs  thompson_sampling.rs
src/common/: arm.rs  armlogic.rs  error.rs  mod.rs  reward.rs  state.rs
src/core/: bandit.rs  error.rs  mod.rs
src/simulation/: metrics.rs  mod.rs  simulator.rs
src/traits/: entities.rs  environment.rs  mod.rs  policy.rs
src/utils/: error.rs
tests/: test_epsilon_greedy.rs
